--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center" class="container">
-  <h1>
-    {{ title }}
-  </h1>
-  <h4>Welcome to my scheduling page. Please follow the instructions to book me in my calendar.</h4>
-  <div style="text-align:center">
-  	<button mz-button>See Dates</button>
-</div>
-</div>
+<app-details></app-details>
 
 
